src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	:root {
		color-scheme: light;
		--image-filter: grayscale(0%);
		/* https://tailwindcss.com/docs/customizing-colors#using-css-variables */
		--theme-bg: 0deg 0% 100%;
		--theme-link: 234.45deg 89.47% 65%;
		--theme-text: 203deg 11% 15%;
		--theme-accent: 234.45deg 89.47% 65%;
		--theme-accent-2: 0deg 0% 7%;
		--theme-quote: 234.45deg 89.47% 65%;

		/* --astro-code-color-foreground: #212121;
		--astro-code-color-background: #fefefe;
		--astro-code-token-default: #1976d2;
		--astro-code-token-constant: #1976d2;
		--astro-code-token-string: #22863a;
		--astro-code-token-comment: #c2c3c5;
		--astro-code-token-keyword: #d32f2f;
		--astro-code-token-parameter: #ff9800;
		--astro-code-token-function: #6f42c1;
		--astro-code-token-string-expression: #212121;
		--astro-code-token-info: #316bcd;
		--astro-code-token-warn: #cd9731;
		--astro-code-token-error: #cd3131;
		--astro-code-token-debug: #800080;
		--astro-code-token-strong: #212121;
		--astro-code-token-punctuation: #212121;
		--astro-code-token-link: #1976d2;
		--astro-code-color-text: #212121; */

		--astro-code-border: #f5f5f5;
	}

	:root.dark {
		color-scheme: dark;
		--image-filter: grayscale(50%);
		--theme-bg: 240deg 17.1% 8%;
		--theme-link: 229.66 93.55% 81.76%;
		--theme-text: 0deg 0% 100%;
		--theme-accent: 229.66 93.55% 81.76%;
		--theme-accent-2: 229.66 93.55% 81.76%;
		--theme-quote: 229.66 93.55% 81.76%;

		/* * available variables when using theme="custom"
		--astro-code-color-foreground: #959cbd;
		--astro-code-color-background: #111118;
		--astro-code-token-default: #79b8ff;
		--astro-code-token-constant: #79b8ff;
		--astro-code-token-string: #ffab70;
		--astro-code-token-comment: #6b737c;
		--astro-code-token-keyword: #f97583;
		--astro-code-token-parameter: #ff9800;
		--astro-code-token-function: #b392f0;
		--astro-code-token-string-expression: #fff;
		--astro-code-token-info: #316bcd;
		--astro-code-token-warn: #cd9731;
		--astro-code-token-error: #cd3131;
		--astro-code-token-debug: #800080;
		--astro-code-token-strong: #fff;
		--astro-code-token-punctuation: #bbbbbb;
		--astro-code-token-link: #1976d2;
		--astro-code-color-text: #fff;
		*/
		--astro-code-border: #262636;
	}

	html {
		@apply scroll-smooth;
	}

	html body {
		@apply mx-auto flex min-h-screen max-w-4xl xl:max-w-6xl flex-col bg-bgColor px-8 pt-16 font-sans text-lg font-normal text-textColor antialiased;
	}

	.prose {
		@apply !max-w-3xl xl:max-w-4xl;
	}
}

.prose-lg :where(pre):not(:where([class~="not-prose"] *)) {
	border: 1px solid var(--astro-code-border);
}

.prose :where(img):not(:where([class~="not-prose"] *)) {
	border-radius: 6px;
}

.prose :where(a):not(:where([class~="not-prose"] *)) {
	@apply hover:underline underline-offset-4;
}

.prose :where(a):not(:where([class~="not-prose"] *)) span {
	margin-left: 4px;
}

*::selection {
	background-color: #818cf8;
	color: #f8fafc;
}

.dark *::selection {
	background-color: #c7d2fe;
	color: #111118;
}


.dark img:not([src*=".svg"]) {
	@apply brightness-50 contrast-50;
	filter: var(--image-filter);
}

.dark .prose :where(img):not(:where([class~="not-prose"] *)) {
	@apply brightness-50 contrast-50;
	filter: var(--image-filter);
}

.shiki,
.shiki span {
	@apply text-base leading-7;
	tab-size: 2;
}

.dark .shiki,
.dark .shiki span {
	color: var(--shiki-dark) !important;
	background-color: hsl(var(--theme-bg)) !important;
}

/* astro-tweet dark theme */
@media (prefers-color-scheme: dark) {
	:where(.astro-tweet-theme) {
		--tweet-border: 2px solid hsla(234, 100%, 83%, 0.233) !important;
		--tweet-font-color: rgb(247, 249, 249);
		--tweet-font-color-secondary: rgb(139, 152, 165);
		--tweet-bg-color: hsl(240, 20%, 12%) !important;
		--tweet-bg-color-hover: hsl(240 15% 10%) !important;
		--tweet-color-blue-secondary:hsl(234, 94%, 80%) !important;
		--tweet-color-blue-secondary-hover: hsla(234, 94%, 80%, 0.147) !important;
	}
}

/* astro-tweet light theme */
html:not(.dark) :where(.astro-tweet-theme) {
	--tweet-border: 2px solid hsla(234, 100%, 83%, 0.233) !important;
	--tweet-font-color: rgb(6, 6, 6);
	--tweet-font-color-secondary: rgb(139, 152, 165);
	--tweet-bg-color: hsl(240, 100%, 100%) !important;
	--tweet-bg-color-hover: hsl(240, 41%, 97%) !important;
	--tweet-color-blue-secondary: hsl(234, 100%, 75%) !important;
	--tweet-verified-blue-color: hsl(234, 100%, 75%) !important;
}

@media (prefers-color-scheme: light) {
	:where(.astro-tweet-theme) {
		--tweet-border: 2px solid hsla(234, 100%, 83%, 0.233) !important;
		--tweet-font-color: rgb(6, 6, 6);
		--tweet-font-color-secondary: rgb(139, 152, 165);
		--tweet-bg-color: hsl(240, 100%, 100%) !important;
		--tweet-bg-color-hover: hsl(240, 41%, 97%) !important;
		--tweet-color-blue-secondary: hsl(234, 100%, 75%) !important;
		--tweet-verified-blue-color: hsl(234, 100%, 75%) !important;
	}
}

.tweet-embed a img {
	max-width: 100%;
	max-height: 100%;
	margin: 0;
}

.prose-lg p {
	letter-spacing: -0.05px;
	word-spacing: -0.05px;
	margin-bottom: 1em;
	font-size: 1em;
}

.prose-lg h2 {
	margin-top: 10px;
	margin-bottom: 10px;
}

